Fix result would show too low

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -29,6 +29,8 @@ h1
     font-size: 2.6em
     line-height: 1.1em
     margin: 20px 10px
+    &.result
+        margin-top: -0.5em
 
 .full
     position: absolute
